[gd_scene load_steps=7 format=3 uid="uid://d3gkvcv3k28p5"]

[ext_resource type="Script" path="res://scripts/pickup/nut_bolt_pickup.gd" id="1_gjcpd"]
[ext_resource type="ArrayMesh" uid="uid://dnamqkxatipce" path="res://art/models/props/tornillo_mesh.res" id="1_v5fkg"]
[ext_resource type="Material" uid="uid://3jrr0rxieqxi" path="res://art/materials/metal_prop.tres" id="2_f4qh6"]
[ext_resource type="ArrayMesh" uid="uid://tmi3ke84g5je" path="res://art/models/props/tuerca_mesh.res" id="2_qi7nu"]

[sub_resource type="SphereShape3D" id="SphereShape3D_a67hp"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4fpyj"]
radius = 0.65

[node name="NutBoltPickup" type="RigidBody3D"]
collision_layer = 64
collision_mask = 93
mass = 5.0
center_of_mass_mode = 1
center_of_mass = Vector3(0.25, 0.25, 0.25)
script = ExtResource("1_gjcpd")
baseMaterial = ExtResource("2_f4qh6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_a67hp")

[node name="BoltMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.243156, 0)
mesh = ExtResource("1_v5fkg")

[node name="NutMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
mesh = ExtResource("2_qi7nu")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_4fpyj")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
